Fix scrollbar mixin

--- a/scss/mixin/_utilities.scss
+++ b/scss/mixin/_utilities.scss
@@ -60,8 +60,8 @@
 
 // Custom scrollbar.
 @mixin scrollbar(
-  $thumb-bg: hsla(0, 0%, 0%, 0.15),
-  $thumb-hover-bg: hsla(0, 0%, 0%, 0.25),
+  $thumb-bg: rgba(0, 0, 0, 0.15),
+  $thumb-bg-hover: hsla(0, 0%, 0%, 0.25),
   $track-bg: hsla(0, 0%, 0%, 0.05),
   $size: 0.5rem,
   $border-radius: variable.$border-radius-sm
@@ -72,16 +72,16 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background: $thumb;
+    background: $thumb-bg;
     border-radius: $border-radius;
 
     &:hover {
-      background: $thumb-hover;
+      background: $thumb-bg-hover;
     }
   }
 
   &::-webkit-scrollbar-track {
-    background: $track;
+    background: $track-bg;
     border-radius: $border-radius;
   }
 }
